<resources>
    <string name="app_name">MUW</string>
    <string name="button_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_username">Please enter username</string>
    <string name="no_internet">No internet</string>
    <string name="no_internet_connection">No internet connectivity. Please check your network
    </string>
    <string name="yes">Yes</string>
    <string name="continue_filling_forms">Continue Filling Forms</string>
    <string name="view_filled_form">View filled Forms</string>
    <string name="error">Error</string>
    <string name="authentication_error_msg">Invalid Username and Password</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="invalid_imei">Invalid IMEI or IMEI not found</string>
    <string name="response_not_found">Response not found</string>
    <string name="input_output_error_occured">Input output error occurred</string>
    <string name="invalid_data_frm_server">Invalid data from server.</string>
    <string name="invalid_server_url"> Server Error.</string>
    <string name="oops_some_thing_happened_wrong">Oops!! Something happened. Please try again
    </string>
    <string name="sync">Sync</string>
    <string name="action_settings">Settings</string>
    <string name="an_initiative_by">An initiative by</string>
    <string name="title_button_registration">New Registration</string>

    <string name="mainMenu_Registration"> Registration </string>
    <string name="mainMenu_Incomplet">Incomplete form</string>
    <string name="mainMenu_Completed">Completed form</string>
    <string name="mainMenu_userProfile">User Profile</string>
    <string name="mainMenu_midline">Midline Interview</string>
    <string name="title_activity_setting">settings</string>

    <string name="category_personal">Personal</string>
    <string name="language">Language</string>
    <string name="default_language">en</string>
    <string name="cancel">Cancel</string>
    <string name="category_sync">Sync</string>
    <string name="sync_forms">Update Forms</string>
    <string name="restore_data">Restore Data</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="check_update">Check Update</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="category_account">Account</string>
    <string name="category_about">About</string>
<string name="total_complete_forms">Total Complete Forms</string>
<string name="total_incomplete_forms">Total Inomplete Forms</string>
    <string-array name="languages">
        <item>@string/title_english</item>
        <item>@string/title_marathi</item>
        <item>@string/title_hindi</item>
    </string-array>

    <string name="title_english">English</string>
    <string name="title_marathi">मराठी</string>
    <string name="title_hindi">हिंदी</string>

    <string-array name="languages_value" translatable="false">
        <item>en</item>
        <item>mr</item>
        <item>hi</item>
    </string-array>

    <string name="downloading_data">Downloading data…</string>
    <string name="forms_already_updated">Forms already updated</string>
    <string name="saving_forms">Saving Forms…</string>
    <string name="select">Select</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="no_data">No data</string>
    <string name="Toast_msg_for_compulsory">Above Questions Are Compulsory</string>
    <string name="exceed_curnt_dt">Entered date exceeds current date</string>
    <string name="save_form">Save Form</string>
    <string name="save_form_message">Do you want to store details of the Form?</string>
    <string name="no">No</string>
    <string name="default_validation_msg">This field is compulsory</string>
    <string name="enter_valid_lmp">Please Enter valid Lmp date</string>
    <string name="present_age_msg">Present age should not be less than age at the marriage</string>
    <string name="dropdown_text">Select</string>
    <string name="capture_photo_text">Capture Photo</string>
    <string name="back_form">Exit Form</string>
    <string name="back_form_message">Do you want to exit?</string>
    <string name="loading_question">Loading questions....</string>
    <string name="title_data_not_found">Data not found</string>
    <string name="sync_forms_message">Please sync forms from settings \nPress OK button to exit
    </string>
    <string name="ok">OK</string>
    <string name="Toast_msg_for_formsavesuccessfully">Form Saved Successfully</string>
    <string name="checkbox_select_msg">Please select all checkboxes</string>
    <string name="Important_Note">Do you want to store details of the Form?</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="no_important_msg">No message detected</string>
    <string name="counselling_msg_txt">Counselling Message</string>

    <string name="choose_video_player">Choose video player</string>
    <string name="no_handler_for_type">No handler for this type of file.</string>
    <string name="file_not_exit_txt">File does not exist !!</string>
    <string name="anc_next_visit">Next Visit</string>
    <string name="nextvisit_text_part1">Your next visit is \t</string>
    <string name="all_anc_visits_comp_title">ANC Visit Complete</string>
    <string name="all_anc_visits_comp_msg">All ANC Visits of women are completed</string>
    <string name="nextvisit_text_part2">\t and it will be due on\t</string>
    <string name="nextvisit_text_part3">\t</string>
    <string name="Reg_women">No Incomplete Visit Found</string>
    <string name="Reg_women_com">No complete Visit Found</string>
    <string name="incomplete_visit">Incomplete visit</string>
    <string name="uploading_forms">Uploading forms…</string>

    <string name="looking_for_update">Looking for update…</string>
    <string name="dialog_app_updated_text">Your app is up to date</string>
    <string name="no_records_error_msg">No Records</string>
    <string name="dialog_update_available">Update Available</string>
    <string name="dialog_install_text">Install</string>
    <string name="apk_download_request_text">New Version</string>
    <string name="apk_download_progress_title">Downloading....</string>
    <string name="restore_warning_text">Warning</string>
    <string name="dialog_msg_loss_data_warning">This operation will remove the unsent forms and this
        might result in loss of data.\nPress Cancel to send unsent forms or Press OK to proceed.
    </string>
    <string name="incompleteformtitle">Incomplete Form</string>
    <string name="midline_unique_id">Participant Id</string>
    <string name="midline_participant_name">Participant name</string>
    <string name="midline_popup_msg">Please enter the id of the participant to fill the Midline Interview </string>
    <string name="midline_continue">Continue</string>
    <string name="midline_empty">No Records found. \n Please click on the following button to start the interview.</string>
    <string name="search_result">SEARCH RESULT</string>
    <string name="search_found">Search Result Found </string>
    <string name="search_already_filled">Form Already filled \n looks like you have already filled the form for this user id</string>
    <string name="search_not_found">Search Result Not Found. \n Please enter valid Participant Id and try again.</string>
    <string name="participant_data_stored">user data stored successfully..</string>
    <string name="midline_title">VERIFY USER DETAILS</string>
    <string name="midline_header">USER DETAILS</string>
    <string name="woman_icon">woman icon</string>
    <string name="enter_user_id">Please enter the user id to verify</string>
    <string name="start">START</string>

</resources>
