<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="280dp"
        android:layout_height="230dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/card3"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mainMenu_margin">

            <ImageView
                android:id="@+id/imgRegistration"
                android:layout_width="@dimen/Main_home_Icon_weight"
                android:layout_height="@dimen/Main_home_Icon_Height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_attendance_icon" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/imgRegistration"
                android:layout_marginTop="@dimen/mainMenu_margin"
                android:text="@string/mainMenu_Registration"
                android:textAlignment="center"
                android:textSize="@dimen/npdsf_main_menu_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="280dp"
        android:layout_height="230dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/card4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mainMenu_margin">

            <ImageView
                android:id="@+id/imgIncomplete"
                android:layout_width="@dimen/Main_home_Icon_weight"
                android:layout_height="@dimen/Main_home_Icon_Height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_incomplete" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/imgIncomplete"
                android:layout_marginTop="@dimen/mainMenu_margin"
                android:text="@string/mainMenu_Incomplet"
                android:textAlignment="center"
                android:textSize="@dimen/npdsf_main_menu_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="280dp"
        android:layout_height="230dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mainMenu_margin">

            <ImageView
                android:id="@+id/imgComplete"
                android:layout_width="@dimen/Main_home_Icon_weight"
                android:layout_height="@dimen/Main_home_Icon_Height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_complete" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/imgComplete"
                android:layout_marginTop="@dimen/mainMenu_margin"
                android:text="@string/mainMenu_Completed"
                android:textAlignment="center"
                android:textSize="@dimen/npdsf_main_menu_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="280dp"
        android:layout_height="230dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/card2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/mainMenu_margin">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="@dimen/Main_home_Icon_weight"
                android:layout_height="@dimen/Main_home_Icon_Height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_user" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/imgUser"
                android:layout_marginTop="@dimen/mainMenu_margin"
                android:text="@string/mainMenu_userProfile"
                android:textAlignment="center"
                android:textSize="@dimen/npdsf_main_menu_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />
</android.support.constraint.ConstraintLayout>