<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="PARTICIPANT DETAILS"
        android:textColor="@color/verify_participant_cardview"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />


    <android.support.v7.widget.CardView
        android:id="@+id/participantDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline18">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/verify_participant_cardview"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/etParticipantId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:inputType="numberPassword"
                android:background="@drawable/midline_verify_element_bg"
                android:backgroundTint="@color/grey"
                android:hint="@string/midline_unique_id"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/color_dark_gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline19" />


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintDetails"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/midline_constraint_bg"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/guideline20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline25"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/txtSearchResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="search result"
                    android:textColor="#FFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtParticipantName"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Juilee Ramdas Shinde"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline27"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline26"
                    app:layout_constraintTop_toTopOf="@+id/guideline29" />

                <TextView
                    android:id="@+id/txtParticipantPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="9874563210"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline28"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline26"
                    app:layout_constraintTop_toTopOf="@+id/guideline27" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline27"
                    app:layout_constraintEnd_toStartOf="@+id/guideline26"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline29"
                    app:srcCompat="@drawable/participant" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.20" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.35" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.20" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.50" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline28"
                    app:layout_constraintEnd_toStartOf="@+id/guideline26"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline27"
                    app:srcCompat="@drawable/participant_phone" />
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/midline_verify_button_bg"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingLeft="5dp"
                android:text="@string/midline_continue"
                android:textColor="#FFFF"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/guideline21"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline20" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/midline_verify_button_bg"
                android:drawableLeft="@drawable/ic_arrow_left"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:text="@string/cancel"
                android:textColor="#FFFF"
                app:layout_constraintBottom_toTopOf="@+id/guideline21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline20" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.80" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.98" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.28" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:elevation="8dp"
        android:src="@drawable/survey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />
</android.support.constraint.ConstraintLayout>